Error de gramatica en el h1

--- a/src/pug/pages/subpages/jApine.pug
+++ b/src/pug/pages/subpages/jApine.pug
@@ -16,7 +16,7 @@ include ../../includes/head
             <div class="wrap">
 
                 <div class="fix-6-12">
-                    <h1 class="smaller margin-bottom-2  done">Las Peliculas más Populares del Momento</h1>
+                    <h1 class="smaller margin-bottom-2  done">Las Películas más Populares del Momento</h1>
                     <h6 class="large done"><span class="opacity-8 "></span>Alpines Js</h6>
                 </div>
 
